Revert "Merge branch 'recalibrate'"
This reverts commit 819de859e081574024f07267be9203c73e7ae804, reversing
changes made to 6371382e2392219c5338d18ea29daa37f4aa6f2e.
